--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello world project</title>
+    <title>MetaX Coin - Cryptocurrency Trading Platform</title>
+    <meta name="description" content="Trade, invest and earn with MetaX Coin - the future of cryptocurrency" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/icon.png" />
   </head>
 
   <body>
